mesa: s/height/depth/ in texsubimage()

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=37648